--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -1,5 +1,7 @@
 spring.application.name=server
- 
+
+server.port=8080
+
 # H2 Database Configuration
 spring.datasource.url=jdbc:postgresql://localhost:5432/dart_db
 spring.datasource.driver-class-name=org.postgresql.Driver
