feat: Add authentication endpoints and configure security settings

--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -1,3 +1,5 @@
+jwt.secret=VGhpcyBpcyBhIHZlcnkgc2VjdXJlIHNlY3JldCBmb3Iganl3dA==
+
 spring.application.name=server
 server.port=8080
 # H2 Database Configuration
