test: Add unit test for DartServerApplication to ensure main runs without exceptions

--- a/server/build.gradle
+++ b/server/build.gradle
@@ -60,6 +60,13 @@ tasks.named('test') {
 
 jacocoTestReport {
     dependsOn test
+    afterEvaluate {
+        classDirectories.setFrom(files(classDirectories.files.collect {
+            fileTree(dir: it, exclude: [
+                    '**/*Entity*',
+            ])
+        }))
+    }
     reports {
         xml.required = true
         html.required = true
