test: Add unit test for DartServerApplication to ensure main runs without exceptions

--- a/server/build.gradle
+++ b/server/build.gradle
@@ -55,7 +55,7 @@ hibernate {
 
 tasks.named('test') {
     useJUnitPlatform()
-    finalizedBy jacocoTestReport
+    finalizedBy jacocoTestReport, jacocoTestCoverageVerification
 }
 
 jacocoTestReport {
@@ -70,5 +70,15 @@ jacocoTestReport {
     reports {
         xml.required = true
         html.required = true
+    }
+}
+
+jacocoTestCoverageVerification {
+    violationRules {
+        rule {
+            limit {
+                minimum = 0.90
+            }
+        }
     }
 }
