--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@react-navigation/elements": "^2.6.3",
     "@react-navigation/native": "^7.1.8",
     "@reduxjs/toolkit": "^2.11.2",
+    "@tanstack/react-query": "^5.90.20",
     "axios": "^1.13.2",
     "expo": "~54.0.32",
     "expo-constants": "~18.0.13",
