--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "expo-symbols": "~1.0.8",
     "expo-system-ui": "~6.0.9",
     "expo-web-browser": "~15.0.10",
+    "lodash": "^4.17.23",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-native": "0.81.5",
@@ -44,6 +45,7 @@
     "react-redux": "^9.2.0"
   },
   "devDependencies": {
+    "@types/lodash": "^4.17.23",
     "@types/react": "~19.1.0",
     "eslint": "^9.25.0",
     "eslint-config-expo": "~10.0.0",
