--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "lodash": "^4.17.23",
     "react": "19.1.0",
     "react-dom": "19.1.0",
+    "react-hook-form": "^7.71.1",
     "react-native": "0.81.5",
     "react-native-gesture-handler": "~2.28.0",
     "react-native-paper": "^5.14.5",
