--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "expo-system-ui": "~6.0.9",
     "expo-web-browser": "~15.0.10",
     "lodash": "^4.17.23",
+    "moment": "^2.30.1",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-hook-form": "^7.71.1",
