feat: Enhance community and post structures with mock data integration
- Updated DUMMY_COMMUNITIES to include MOCK_AUDITABLE_USER for consistent user data.
- Introduced DUMMY_POSTS with various media types and structured content for enhanced post representation.
- Modified mock.ts to define MOCK_AUDITABLE_USER and refactor MOCK_COMMUNITY_1 and MOCK_COMMUNITY_2 to utilize this new structure.
- Expanded types.ts to include Post interface and MediaItem types for better type safety and clarity.
- Added expo-video dependency to package.json for video handling capabilities.

--- a/app.json
+++ b/app.json
@@ -28,6 +28,13 @@
     "plugins": [
       "expo-router",
       [
+        "expo-video",
+        {
+          "supportsBackgroundPlayback": true,
+          "supportsPictureInPicture": true
+        }
+      ],
+      [
         "expo-splash-screen",
         {
           "image": "./assets/images/splash-icon.png",
