--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "expo-status-bar": "~3.0.9",
     "expo-symbols": "~1.0.8",
     "expo-system-ui": "~6.0.9",
+    "expo-video": "^3.0.15",
     "expo-web-browser": "~15.0.10",
     "lodash": "^4.17.23",
     "moment": "^2.30.1",
